--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@manifoldco/ui": "0.0.9",
+    "@manifoldco/ui": "0.0.13",
+    "mini-svg-data-uri": "^1.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
@@ -28,11 +29,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@manifoldco/icons": "0.0.3",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
     "@types/react": "16.8.13",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.2",
-    "@types/styled-components": "^4.1.14"
+    "@types/styled-components": "^4.1.14",
+    "eslint-plugin-react-hooks": "^1.6.0",
+    "prettier": "^1.17.0"
   }
 }
