--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.0.0",
     "styled-components": "^4.2.0",
     "typescript": "3.4.3"
   },
@@ -36,7 +36,6 @@
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.2",
     "@types/styled-components": "^4.1.14",
-    "eslint-plugin-react-hooks": "^1.6.0",
     "prettier": "^1.17.0"
   }
 }
