--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "dependencies": {
     "@manifoldco/icons": "0.0.3",
-    "@manifoldco/ui": "0.0.16-alpha",
+    "@manifoldco/ui": "0.0.16",
     "mini-svg-data-uri": "^1.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -32,8 +32,8 @@
   "devDependencies": {
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
-    "@types/react": "16.8.13",
-    "@types/react-dom": "16.8.4",
+    "@types/react": "^16.8.14",
+    "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.2",
     "@types/styled-components": "^4.1.14",
     "prettier": "^1.17.0"
