--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_MANIFOLD_API_TOKEN=$MANIFOLD_API_TOKEN
 REACT_APP_MANIFOLD_USER_ID=$MANIFOLD_USER_ID
+REACT_APP_MANIFOLD_ENV=$MANIFOLD_ENV
